Filter out dbms privileges